--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
 momentum/node_modules
+
 capstone/client/node_modules/
 capstone/server/node_modules/
 capstone/server/.env
 bachelerwebsite/node_modules
+
 bachelerwebsite/build
 bachelerwebsite/nginx
+
+#RecipReel
+RecipeReel/client/node_modules
+RecipeReel/server/node_modules
+
+
+#CampuseStudent
+campuse-student/node_modules
+campuse-student/server/node_modules
